crates/reinhardt-pages/tests/ui/style/fail/unanchored_selector.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! { button { color: red; } };
fn main() {}
